app/static/css/problem.css
#content {
    display: flex;
    flex-flow: row;
    width: 100%;
    background-color: white;
}

#statementsBox {
    display: flex;
    flex-flow: column;
    flex-grow: 1;
    flex-basis: 50%;
}

#statementsTitle {
    display: flex;
    flex-flow: row;
    height: 80px;
    border-bottom: 1px solid whitesmoke;
}

#statementsTitle.shadow {
    border-bottom: 1px solid #e9e9e9;
    box-shadow: 0 0 20px lightgrey;
}

#problemActions {
    display: flex;
    flex-flow: row;
    margin: 15px;
}

#goBack, #reloadStatements {
    height: 50px;
    width: 50px;
    font-size: 18px;
}

#problemInfo {
    display: flex;
    flex-flow: row;
    flex-wrap: nowrap;
    flex-grow: 1;
    align-items: center;
    margin: 10px;
}

#problemName {
    flex-grow: 1;
    width: 0;
    font-size: 25px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

#problemLanguage {
    display: flex;
    flex-flow: row;
    align-items: center;
}

#problemLanguageSelect {
    margin-right: 5px;
}

#statementsContent {
    position: relative;
    flex-grow: 1;
}

#statementsContentScrollable {
    padding: 20px;
    max-height: 0;
    overflow: auto;
}

#statementsHeader {
    display: flex;
    flex-flow: row;
    flex-wrap: wrap;
    align-items: center;
    margin: 0 auto 30px auto;
    max-width: 1024px;
    font-size: 20px;
}

#timeLimit {
    margin: 5px 20px 5px 5px;
}

#memoryLimit {
    margin: 5px auto 5px 5px;
}

#inputOutput {
    margin: 5px;
}

#statementsLoading {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    display: flex;
}

#statementsLoadingLabel {
    margin: auto;
}

#extraBox {
    position: relative;
    display: flex;
    flex-flow: column;
    flex-grow: 1;
    flex-basis: 50%;
}

#extraBox.collapsed {
    flex: 0;
}

#extraBox.collapsed * {
    display: none;
}

#extraBoxCollapse {
    position: absolute;
    top: 50%;
    left: 0;
    height: 60px;
    width: 30px;
    transform: translateY(-50%);
    padding-left: 3px;
    border-radius: 0 30px 30px 0;
    font-size: 16px;
    box-shadow: 0 0 5px lightgrey;
}

.extra-box {
    display: flex;
    flex-flow: column;
    flex-grow: 1;
}

.extra-box .extra-title {
    position: relative;
    display: flex;
    flex-flow: row;
    flex-wrap: wrap;
    height: 80px;
    border-bottom-width: 1px;
    box-shadow: 0 0 10px lightgrey;
    z-index: 1;
}

.extra-box .extra-content {
    position: relative;
    display: flex;
    flex-flow: column;
    flex-grow: 1;
    overflow: auto;
    box-shadow: 0 0 15px -5px lightgrey;
}

#submitBox::after {
    content: "";
    position: absolute;
    top: 40px;
    left: 100%;
    height: 12px;
    width: 12px;
    transform: translate(-50%, -50%) rotate(45deg);
    background-color: lightgreen;
    z-index: 1;
}

#submitTitle {
    align-items: center;
}

#submitText {
    margin: 20px;
    font-size: 25px;
}

#submitForm {
    margin: 25px 20px;
}

#taskRow, #languageRow, #chooseFileRow, #submitFileRow {
    display: flex;
    flex-flow: row;
    flex-wrap: wrap;
    align-items: center;
    margin-bottom: 10px;
}

#taskLabel, #languageLabel, #chooseFileLabel, #submitFileLabel {
    flex-basis: 150px;
    margin: 5px 10px;
    font-size: 17px;
}

#taskSelect, #languageSelect {
    flex-grow: 1;
    width: 200px;
}

#chooseFileButton, #submitFileButton {
    width: 130px;
    font-size: 18px;
    text-align: center;
}

#chooseFileName, #submitLoading, #submitSuccess, #submitFail {
    flex-grow: 1;
    padding: 5px 0;
    margin: auto 10px;
    width: 100px;
    font-size: 17px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

#submissions {
    margin: 0 20px 20px 20px;
}

#submissionsLoading {
    display: flex;
    margin: 25px;
}

#submissionsLoadingLabel {
    margin: auto;
}

#submissionsNone {
    margin: 40px;
    font-size: 20px;
    text-align: center;
}

#submissionsTable {
    width: 100%;
    font-size: 16px;
}

#submissionsTable tr {
    vertical-align: middle;
}

#submissionsTable th {
    height: 60px;
}

#submissionsTable td {
    height: 40px;
    text-align: center;
}

#submissionsTable .status {
    min-width: 120px;
}

#submissionsTable .status span {
    vertical-align: middle;
}

#submissionDetailsTitle {
    flex-wrap: nowrap !important;
}

#submissionDetailsTitleMain {
    display: flex;
    flex-flow: row;
    flex-wrap: wrap;
    flex-grow: 1;
    padding-left: 20px;
}

#submissionDetailsLabel {
    flex-grow: 1;
    margin: auto 20px auto 0;
    font-size: 25px;
}

#submissionDetailsNavigation {
    display: flex;
    flex-flow: row;
    flex-wrap: wrap;
    flex-grow: 1;
    margin: -2px 0;
}

#submissionDetailsNavigation .btn-nav {
    margin-right: 20px;
}

#submissionDetailsClose {
    height: 50px;
    width: 50px;
    margin: 15px;
    font-size: 20px;
}

#submissionProtocol {
    display: flex;
    flex-flow: column;
    flex-grow: 1;
}

#submissionResult {
    display: flex;
    flex-flow: row;
    flex-wrap: wrap;
    padding: 20px;
    border-bottom: 1px solid whitesmoke;
}

#submissionResultStatus {
    margin: 5px auto 5px 5px;
    font-size: 20px;
}

#submissionResultTestsPassed {
    margin: 5px;
    font-size: 18px;
}

#submissionCompilation pre {
    padding: 30px 20px;
    white-space: pre-wrap;
}

#submissionEvaluation {
    overflow-x: auto;
}

#submissionEvaluationTable {
    width: 100%;
    margin: 20px 0;
    font-size: 16px;
}

#submissionEvaluationTable tr {
    vertical-align: middle;
}

#submissionEvaluationTable th {
    padding: 15px 5px;
    white-space: nowrap;
}

#submissionEvaluationTable td {
    padding: 10px 5px;
    text-align: center;
}

#submissionCode {
    display: flex;
    flex-flow: column;
    flex-grow: 1;
}

#submissionCode pre {
    flex-grow: 1;
    padding: 30px 20px;
    white-space: pre-wrap;
}

#submissionCodeBottom {
    position: sticky;
    display: flex;
    flex-flow: row;
    bottom: 0;
    height: 80px;
    width: 0;
}

#submissionCodeCopy {
    height: 50px;
    width: 50px;
    margin: 15px;
    font-size: 18px;
    box-shadow: 0 0 15px lightgrey;
}

#submissionCodeCopyHint {
    position: relative;
    flex-shrink: 0;
    padding: 10px 20px 10px 15px;
    margin: auto auto auto 0;
    color: rgba(0, 0, 0, 0.8);
    border-radius: 25px;
    font-size: 18px;
    line-height: 20px;
    box-shadow: 0 0 15px lightgrey;
}

#submissionCodeCopyHint::after {
    content: "";
    position: absolute;
    top: 50%;
    left: 3px;
    height: 14px;
    width: 14px;
    transform: translate(-50%, -50%) rotate(45deg);
    background-color: inherit;
}

#submissionInfo {
    display: flex;
    flex-flow: column;
    flex-grow: 1;
}

#submissionInfoTable {
    width: 100%;
    border-collapse: collapse;
    font-size: 16px;
}

#submissionInfoTable td {
    padding: 20px;
    border: 1px solid whitesmoke;
}

#submissionInfoTable td:first-child {
    font-size: 18px;
}

#contestInfoBox::after {
    content: "";
    position: absolute;
    bottom: 80px;
    left: 100%;
    height: 50px;
    width: 2px;
    background-color: lightblue;
}

#contestInfoTitle {
    align-items: center;
}

#contestInfoText {
    margin: 20px;
    font-size: 25px;
}

#contestMessagesBox::after {
    content: "";
    position: absolute;
    bottom: 15px;
    left: 100%;
    height: 50px;
    width: 2px;
    background-color: gold;
}

#contestMessagesTitle {
    align-items: center;
}

#contestMessagesText {
    margin: 20px;
    font-size: 25px;
}

#rightBox {
    display: flex;
    flex-flow: column;
    border-left: 1px solid whitesmoke;
}

#submitSection {
    display: flex;
    height: 80px;
    border-bottom: 1px solid whitesmoke;
}

#submitExpand {
    margin: auto;
    height: 50px;
    width: 50px;
    font-size: 16px;
}

#submitExpand span {
    padding-right: 2px;
}

#problemNavigation {
    flex-grow: 1;
    height: 0;
    overflow-y: auto;
}

#problemNavigation .action {
    height: 50px;
    width: 50px;
    margin: 15px;
    font-size: 18px;
}

#problemNavigation .action.active {
    color: white;
    background-color: rgb(21, 148, 252);
    border-color: transparent;
}

#infoSection {
    display: flex;
    flex-flow: column;
    border-top: 1px solid whitesmoke;
    text-align: center;
}

#timeRemaining {
    margin: 15px auto 15px auto;
    color: dimgrey;
    font-size: 14px;
}

#contestTimer {
    color: black;
    font-size: 20px;
    line-height: 35px;
}

#viewContestInfo, #viewContestMessages {
    height: 50px;
    width: 50px;
    margin: 0 auto 15px auto;
    font-size: 16px;
}

@media (max-width: 1000px) {
    #statementsBox.collapsed {
        flex: 0;
    }

    #statementsBox.collapsed * {
        display: none;
    }
}

@media (max-width: 600px) {
    #problemName {
        visibility: hidden;
    }

    #chooseFileLabel, #submitFileLabel {
        display: none;
    }

    #submissionsTable .language {
        display: none;
    }
}

